// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux-module-teams reducer should handle FETCH_TEAMS 1`] = `
Immutable.Map {
  "byId": Immutable.Map {},
  "status": Immutable.Record {
    "isFetching": true,
    "hasFetched": false,
    "error": undefined,
  },
}
`;

exports[`redux-module-teams reducer should handle STORE_TEAMS 1`] = `
Immutable.Map {
  "byId": Immutable.Map {
    "teamId": Immutable.Record {
      "id": "teamId",
      "color": "#abcabc",
      "generalConversationId": "10000000-0000-0000-0000-000000000000",
      "displayName": "test team!",
      "description": "team that tests",
      "status": Object {
        "isArchived": false,
      },
    },
  },
  "status": Immutable.Record {
    "isFetching": false,
    "hasFetched": true,
    "error": undefined,
  },
}
`;

exports[`redux-module-teams reducer should handle STORE_TEAMS_ERROR 1`] = `
Immutable.Map {
  "byId": Immutable.Map {},
  "status": Immutable.Record {
    "isFetching": false,
    "hasFetched": false,
    "error": [Error: 429 Retry],
  },
}
`;

exports[`redux-module-teams reducer should return initial state 1`] = `
Immutable.Map {
  "byId": Immutable.Map {},
  "status": Immutable.Record {
    "isFetching": false,
    "hasFetched": false,
    "error": undefined,
  },
}
`;
